[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "image-plane-correction"
description = "Image-plane correction algorithms for the OVRO-LWA radio telescope"
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}
version = "0.1"

authors = [
  {name = "Zachary Huang", email = "zwhuang@caltech.edu"},
]

maintainers = [
  {name = "Zachary Huang", email = "zwhuang@caltech.edu"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
  "numpy",
  "pandas",
  "astropy",
  "bdsf",
  "scipy",
  "matplotlib",
  "multiprocess",
  "jax",
  "jaxtyping",
  "interpax",
]

[project.optional-dependencies]
dev = [
  "jupyterlab",
  "ipympl",
  "ruff",
  "pyright",
  "isort",
]

gpu = [
  "jax[cuda12]"
]

[project.urls]
Homepage = "https://github.com/ovro-lwa/image-plane-correction"
Repository = "https://github.com/ovro-lwa/image-plane-correction"
Issues = "https://github.com/ovro-lwa/image-plane-correction/issues"

[tool.pyright]
include = ["src", "scripts"]

[tool.isort]
src_paths = ["src", "scripts"]

[tool.ruff]
include = ["src/*.py", "scripts/*.py"]
extend-include = ["notebooks/*.ipynb"]
